2014-07-24  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Functions/Zle/replace-argument, Doc/Zsh/contrib.yo:
	allow negative numeric prefix to count backwards from last
	argument.

2014-07-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jai Keerthan: users/18981: Completion/Unix/Command/_tmux:
	improved function completion.

2014-07-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 32898 (credit Jun T.): Doc/Zsh/mod_pcre.yo: fix bug in 32891.

2014-07-23  Ansgar Burchardt  <ansgar@debian.org>

	* 32895: Completion/Unix/Command/_nm: Match more shared library
	names.

2014-07-20  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/builtins.yo: force retention of whitespace
	in "fc" item prototype

	* 32891: Doc/Zsh/mod_pcre.yo Src/Modules/pcre.c: the CASE_MATCH
	option should apply to =~ when using pcre; fix pcre_match bug
	with handling of empty string argument.

2014-07-17  Barton E. Schaefer  <schaefer@zsh.org>

	* 32882 (cf. Augie Fackler 32879): Src/hist.c: restore correct
	reload of backslash-continuation lines from history, broken by
	workers/30443 just before the zsh 5.0.0 release; fix bad history
	write of events ending with an even number of backslashes.

2014-07-17  Oliver Kiddle  <opk@zsh.org>

	* 32849: Completion/Linux/Command/_ss: new completion function

	* 32848: Completion/Unix/Command/_perl,
	Completion/Unix/Command/_python, Completion/Unix/Command/_ruby:
	fix words array before using _normal for script arguments

2014-07-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 32866 (plus extra undo fix in read-from-minibuffer):
	Doc/Zsh/contrib.yo, Functions/Zle/read-from-minibuffer,
	Functions/Zle/replace-argument: new replace-argument function;
	fixes in read-from-minibuffer not to pass through numeric
	argument to recursive edit and to hide minibuffer edit from
	undo history.

2014-07-15  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Koen Wilde: 32863:  Completion/Unix/Command/_mpc: mpc "insert"
	command.
