@@ -1,3 +1,9 @@
+2014-07-24  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 32903: Src/Modules/parameter.c: new empty (unset) elements in
+	the special parameter hash tables are special themselves, so that
+	adding elements via assignment syntax handles them correctly.
+
 2014-07-24  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* unposted: Functions/Zle/replace-argument, Doc/Zsh/contrib.yo:
